# lichess-puzzles

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  db.py  filters.py  main.py  models.py  queries.py  sessions.py
app/routers/: meta.py  puzzles.py  sessions.py
docs/superpowers/plans/: 2026-04-18-lichess-puzzles.md  2026-04-29-phase3-stats-screen.md  2026-04-29-phase4-free-mode.md  2026-04-29-session-trainer-phase1.md  2026-04-29-session-trainer-phase2.md
docs/superpowers/specs/: 2026-04-18-lichess-puzzles-design.md  2026-04-29-session-trainer-design.md
ingest/: derive.py  download.py  run.py  writer.py
static/: explore.html  index.html  play.html  presets.json  stats.html
static/css/: config.css  play.css  stats.css  styles.css
static/js/: api.js  config.js  explore.js  filters.js  play.js  stats.js  trainer.js
tests/: conftest.py  test_db.py  test_derive.py  test_download.py  test_filters.py  test_main.py  test_meta_router.py  test_models.py  test_puzzles_router.py  test_queries.py  test_run_ingest.py  test_sessions.py  test_writer.py
tests/fixtures/: puzzles_sample.csv
