[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lichess-puzzles"
version = "0.1.0"
description = "Self-hosted Lichess puzzle trainer with extended filters"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-chess>=1.999",
    "zstandard>=0.22",
    "httpx>=0.27",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*", "ingest*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
